<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="myCartVM"
            type="com.switchsolutions.farmtohome.bdo.CartViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".fragments.CreateRequestFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="15dp"/>


        <AutoCompleteTextView
            android:id="@+id/et_select_customer"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingStart="5dp"
            android:ems="10"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/select_customer"
            android:inputType="textPersonName"/>

</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_date"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:id="@+id/ll_delivery_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_date_selected"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:paddingStart="5dp"
            android:background="@drawable/rounded_edittext_bg"
            android:text="@string/tv_date_format"
            android:layout_marginStart="15dp"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/iv_date_picker"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/calendar"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/add_product"
        android:textSize="16sp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_select_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="15dp"/>

        <AutoCompleteTextView
            android:id="@+id/et_select_product"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:paddingStart="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_edittext_bg"
            android:ems="10"
            android:hint="@string/select_product"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <TextView
            android:id="@+id/tv_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="15dp"/>

            <EditText
                android:id="@+id/et_select_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="10"
                android:maxLines="1"
                android:maxLength="4"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/enter_quantity"
                android:inputType="number"/>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_add_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:minHeight="48dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        app:fb_defaultColor="@color/colorAccent"
        app:fb_radius="20dp"
        app:fb_text="@string/add_to_cart_product"
        app:fb_textColor="#FFFFFF" />
</LinearLayout>
</layout>